Set up google colab

--- a/examples/notebooks/02 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb
+++ b/examples/notebooks/02 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb
@@ -29,6 +29,7 @@
     }
    ],
    "source": [
+    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main  # install liionpack\n",
     "import liionpack as lp\n",
     "import numpy as np\n",
     "import os\n",
