--- a/examples/notebooks/01 Getting Started.ipynb
+++ b/examples/notebooks/01 Getting Started.ipynb
@@ -36,6 +36,7 @@
     }
    ],
    "source": [
+    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main  # install liionpack\n",
     "import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np"
