--- a/examples/notebooks/05 Drive cycles.ipynb
+++ b/examples/notebooks/05 Drive cycles.ipynb
@@ -29,6 +29,7 @@
     }
    ],
    "source": [
+    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main  # install liionpack\n",
     "import pybamm\n",
     "import numpy as np\n",
     "import os\n",
