--- a/examples/notebooks/01 Getting Started.ipynb
+++ b/examples/notebooks/01 Getting Started.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Started"
+    "# 01 Getting Started"
    ]
   },
   {
