Update notebooks with try except on import liionpack and add more args to plot function

--- a/docs/examples/02 Using inputs.ipynb
+++ b/docs/examples/02 Using inputs.ipynb
@@ -20,8 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
-    "import liionpack as lp\n",
+    "try:\n",
+    "    import liionpack as lp\n",
+    "except:\n",
+    "    !pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
+    "    import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np"
    ]
@@ -116,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "InputParameter(-0x2c6f080dd8efe16, Negative particle radius [m], children=[], domain=[], auxiliary_domains={})"
+       "InputParameter(0x64d8c09589d5a353, Negative particle radius [m], children=[], domain=[], auxiliary_domains={})"
       ]
      },
      "execution_count": 7,
@@ -160,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|███████████████████████████████████████████████████████████| 270/270 [00:02<00:00, 96.88it/s]\n"
+      "Stepping simulation: 100%|██████████████████████████████████████████████████████████| 270/270 [00:02<00:00, 105.76it/s]\n"
      ]
     },
     {
@@ -239,7 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|██████████████████████████████████████████████████████████| 270/270 [00:02<00:00, 106.59it/s]\n"
+      "Stepping simulation: 100%|██████████████████████████████████████████████████████████| 270/270 [00:02<00:00, 104.21it/s]\n"
      ]
     },
     {
