--- a/docs/examples/03 Experiments.ipynb
+++ b/docs/examples/03 Experiments.ipynb
@@ -20,8 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
-    "import liionpack as lp\n",
+    "try:\n",
+    "    import liionpack as lp\n",
+    "except:\n",
+    "    !pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
+    "    import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -228,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:10<00:00, 110.70it/s]\n"
+      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:11<00:00, 107.88it/s]\n"
      ]
     }
    ],
