--- a/docs/examples/01 Getting Started.ipynb
+++ b/docs/examples/01 Getting Started.ipynb
@@ -27,8 +27,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
-    "import liionpack as lp\n",
+    "try:\n",
+    "    import liionpack as lp\n",
+    "except:\n",
+    "    !pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
+    "    import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np"
    ]
@@ -249,232 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leading-order x-averaged negative electrode porosity\n",
-      "Leading-order x-averaged negative electrode porosity change\n",
-      "Leading-order x-averaged negative electrode tortuosity\n",
-      "Leading-order x-averaged negative electrolyte tortuosity\n",
-      "Leading-order x-averaged positive electrode porosity\n",
-      "Leading-order x-averaged positive electrode porosity change\n",
-      "Leading-order x-averaged positive electrode tortuosity\n",
-      "Leading-order x-averaged positive electrolyte tortuosity\n",
-      "Leading-order x-averaged separator porosity\n",
-      "Leading-order x-averaged separator porosity change\n",
-      "Leading-order x-averaged separator tortuosity\n",
-      "Sum of x-averaged negative electrode electrolyte reaction source terms\n",
-      "Sum of x-averaged negative electrode interfacial current densities\n",
-      "Sum of x-averaged positive electrode electrolyte reaction source terms\n",
-      "Sum of x-averaged positive electrode interfacial current densities\n",
-      "X-averaged Ohmic heating\n",
-      "X-averaged Ohmic heating [W.m-3]\n",
-      "X-averaged SEI concentration [mol.m-3]\n",
-      "X-averaged SEI film overpotential\n",
-      "X-averaged SEI film overpotential [V]\n",
-      "X-averaged SEI interfacial current density\n",
-      "X-averaged SEI interfacial current density [A.m-2]\n",
-      "X-averaged SEI thickness\n",
-      "X-averaged SEI thickness [m]\n",
-      "X-averaged battery concentration overpotential [V]\n",
-      "X-averaged battery electrolyte ohmic losses [V]\n",
-      "X-averaged battery open circuit voltage [V]\n",
-      "X-averaged battery reaction overpotential [V]\n",
-      "X-averaged battery solid phase ohmic losses [V]\n",
-      "X-averaged cell temperature\n",
-      "X-averaged cell temperature [K]\n",
-      "X-averaged concentration overpotential\n",
-      "X-averaged concentration overpotential [V]\n",
-      "X-averaged electrolyte concentration\n",
-      "X-averaged electrolyte concentration [Molar]\n",
-      "X-averaged electrolyte concentration [mol.m-3]\n",
-      "X-averaged electrolyte ohmic losses\n",
-      "X-averaged electrolyte ohmic losses [V]\n",
-      "X-averaged electrolyte overpotential\n",
-      "X-averaged electrolyte overpotential [V]\n",
-      "X-averaged electrolyte potential\n",
-      "X-averaged electrolyte potential [V]\n",
-      "X-averaged inner SEI concentration [mol.m-3]\n",
-      "X-averaged inner SEI interfacial current density\n",
-      "X-averaged inner SEI interfacial current density [A.m-2]\n",
-      "X-averaged inner SEI thickness\n",
-      "X-averaged inner SEI thickness [m]\n",
-      "X-averaged irreversible electrochemical heating\n",
-      "X-averaged irreversible electrochemical heating [W.m-3]\n",
-      "X-averaged lithium plating concentration\n",
-      "X-averaged lithium plating concentration [mol.m-3]\n",
-      "X-averaged lithium plating interfacial current density\n",
-      "X-averaged lithium plating interfacial current density [A.m-2]\n",
-      "X-averaged lithium plating thickness [m]\n",
-      "X-averaged negative effective diffusivity\n",
-      "X-averaged negative effective diffusivity [m2.s-1]\n",
-      "X-averaged negative electrode SEI interfacial current density\n",
-      "X-averaged negative electrode active material volume fraction\n",
-      "X-averaged negative electrode active material volume fraction change\n",
-      "X-averaged negative electrode entropic change\n",
-      "X-averaged negative electrode entropic change [V.K-1]\n",
-      "X-averaged negative electrode exchange current density\n",
-      "X-averaged negative electrode exchange current density [A.m-2]\n",
-      "X-averaged negative electrode exchange current density per volume [A.m-3]\n",
-      "X-averaged negative electrode extent of lithiation\n",
-      "X-averaged negative electrode interfacial current density\n",
-      "X-averaged negative electrode interfacial current density [A.m-2]\n",
-      "X-averaged negative electrode interfacial current density per volume [A.m-3]\n",
-      "X-averaged negative electrode lithium plating interfacial current density\n",
-      "X-averaged negative electrode lithium plating reaction overpotential\n",
-      "X-averaged negative electrode lithium plating reaction overpotential [V]\n",
-      "X-averaged negative electrode ohmic losses\n",
-      "X-averaged negative electrode ohmic losses [V]\n",
-      "X-averaged negative electrode open circuit potential\n",
-      "X-averaged negative electrode open circuit potential [V]\n",
-      "X-averaged negative electrode oxygen exchange current density\n",
-      "X-averaged negative electrode oxygen exchange current density [A.m-2]\n",
-      "X-averaged negative electrode oxygen exchange current density per volume [A.m-3]\n",
-      "X-averaged negative electrode oxygen interfacial current density\n",
-      "X-averaged negative electrode oxygen interfacial current density [A.m-2]\n",
-      "X-averaged negative electrode oxygen interfacial current density per volume [A.m-3]\n",
-      "X-averaged negative electrode oxygen open circuit potential\n",
-      "X-averaged negative electrode oxygen open circuit potential [V]\n",
-      "X-averaged negative electrode oxygen reaction overpotential\n",
-      "X-averaged negative electrode oxygen reaction overpotential [V]\n",
-      "X-averaged negative electrode porosity\n",
-      "X-averaged negative electrode porosity change\n",
-      "X-averaged negative electrode potential\n",
-      "X-averaged negative electrode potential [V]\n",
-      "X-averaged negative electrode pressure\n",
-      "X-averaged negative electrode reaction overpotential\n",
-      "X-averaged negative electrode reaction overpotential [V]\n",
-      "X-averaged negative electrode resistance [Ohm.m2]\n",
-      "X-averaged negative electrode surface area to volume ratio\n",
-      "X-averaged negative electrode surface area to volume ratio [m-1]\n",
-      "X-averaged negative electrode surface potential difference\n",
-      "X-averaged negative electrode surface potential difference [V]\n",
-      "X-averaged negative electrode temperature\n",
-      "X-averaged negative electrode temperature [K]\n",
-      "X-averaged negative electrode tortuosity\n",
-      "X-averaged negative electrode total interfacial current density\n",
-      "X-averaged negative electrode total interfacial current density [A.m-2]\n",
-      "X-averaged negative electrode total interfacial current density per volume [A.m-3]\n",
-      "X-averaged negative electrode transverse volume-averaged acceleration\n",
-      "X-averaged negative electrode transverse volume-averaged acceleration [m.s-2]\n",
-      "X-averaged negative electrode transverse volume-averaged velocity\n",
-      "X-averaged negative electrode transverse volume-averaged velocity [m.s-2]\n",
-      "X-averaged negative electrode volume-averaged acceleration\n",
-      "X-averaged negative electrode volume-averaged acceleration [m.s-1]\n",
-      "X-averaged negative electrolyte concentration\n",
-      "X-averaged negative electrolyte concentration [mol.m-3]\n",
-      "X-averaged negative electrolyte potential\n",
-      "X-averaged negative electrolyte potential [V]\n",
-      "X-averaged negative electrolyte tortuosity\n",
-      "X-averaged negative particle concentration\n",
-      "X-averaged negative particle concentration [mol.m-3]\n",
-      "X-averaged negative particle flux\n",
-      "X-averaged negative particle surface concentration\n",
-      "X-averaged negative particle surface concentration [mol.m-3]\n",
-      "X-averaged open circuit voltage\n",
-      "X-averaged open circuit voltage [V]\n",
-      "X-averaged outer SEI concentration [mol.m-3]\n",
-      "X-averaged outer SEI interfacial current density\n",
-      "X-averaged outer SEI interfacial current density [A.m-2]\n",
-      "X-averaged outer SEI thickness\n",
-      "X-averaged outer SEI thickness [m]\n",
-      "X-averaged positive effective diffusivity\n",
-      "X-averaged positive effective diffusivity [m2.s-1]\n",
-      "X-averaged positive electrode SEI interfacial current density\n",
-      "X-averaged positive electrode active material volume fraction\n",
-      "X-averaged positive electrode active material volume fraction change\n",
-      "X-averaged positive electrode entropic change\n",
-      "X-averaged positive electrode entropic change [V.K-1]\n",
-      "X-averaged positive electrode exchange current density\n",
-      "X-averaged positive electrode exchange current density [A.m-2]\n",
-      "X-averaged positive electrode exchange current density per volume [A.m-3]\n",
-      "X-averaged positive electrode extent of lithiation\n",
-      "X-averaged positive electrode interfacial current density\n",
-      "X-averaged positive electrode interfacial current density [A.m-2]\n",
-      "X-averaged positive electrode interfacial current density per volume [A.m-3]\n",
-      "X-averaged positive electrode lithium plating interfacial current density\n",
-      "X-averaged positive electrode ohmic losses\n",
-      "X-averaged positive electrode ohmic losses [V]\n",
-      "X-averaged positive electrode open circuit potential\n",
-      "X-averaged positive electrode open circuit potential [V]\n",
-      "X-averaged positive electrode oxygen exchange current density\n",
-      "X-averaged positive electrode oxygen exchange current density [A.m-2]\n",
-      "X-averaged positive electrode oxygen exchange current density per volume [A.m-3]\n",
-      "X-averaged positive electrode oxygen interfacial current density\n",
-      "X-averaged positive electrode oxygen interfacial current density [A.m-2]\n",
-      "X-averaged positive electrode oxygen interfacial current density per volume [A.m-3]\n",
-      "X-averaged positive electrode oxygen open circuit potential\n",
-      "X-averaged positive electrode oxygen open circuit potential [V]\n",
-      "X-averaged positive electrode oxygen reaction overpotential\n",
-      "X-averaged positive electrode oxygen reaction overpotential [V]\n",
-      "X-averaged positive electrode porosity\n",
-      "X-averaged positive electrode porosity change\n",
-      "X-averaged positive electrode potential\n",
-      "X-averaged positive electrode potential [V]\n",
-      "X-averaged positive electrode pressure\n",
-      "X-averaged positive electrode reaction overpotential\n",
-      "X-averaged positive electrode reaction overpotential [V]\n",
-      "X-averaged positive electrode surface area to volume ratio\n",
-      "X-averaged positive electrode surface area to volume ratio [m-1]\n",
-      "X-averaged positive electrode surface potential difference\n",
-      "X-averaged positive electrode surface potential difference [V]\n",
-      "X-averaged positive electrode temperature\n",
-      "X-averaged positive electrode temperature [K]\n",
-      "X-averaged positive electrode tortuosity\n",
-      "X-averaged positive electrode total interfacial current density\n",
-      "X-averaged positive electrode total interfacial current density [A.m-2]\n",
-      "X-averaged positive electrode total interfacial current density per volume [A.m-3]\n",
-      "X-averaged positive electrode transverse volume-averaged acceleration\n",
-      "X-averaged positive electrode transverse volume-averaged acceleration [m.s-2]\n",
-      "X-averaged positive electrode transverse volume-averaged velocity\n",
-      "X-averaged positive electrode transverse volume-averaged velocity [m.s-2]\n",
-      "X-averaged positive electrode volume-averaged acceleration\n",
-      "X-averaged positive electrode volume-averaged acceleration [m.s-1]\n",
-      "X-averaged positive electrolyte concentration\n",
-      "X-averaged positive electrolyte concentration [mol.m-3]\n",
-      "X-averaged positive electrolyte potential\n",
-      "X-averaged positive electrolyte potential [V]\n",
-      "X-averaged positive electrolyte tortuosity\n",
-      "X-averaged positive particle concentration\n",
-      "X-averaged positive particle concentration [mol.m-3]\n",
-      "X-averaged positive particle flux\n",
-      "X-averaged positive particle surface concentration\n",
-      "X-averaged positive particle surface concentration [mol.m-3]\n",
-      "X-averaged reaction overpotential\n",
-      "X-averaged reaction overpotential [V]\n",
-      "X-averaged reversible heating\n",
-      "X-averaged reversible heating [W.m-3]\n",
-      "X-averaged separator electrolyte concentration\n",
-      "X-averaged separator electrolyte concentration [mol.m-3]\n",
-      "X-averaged separator electrolyte potential\n",
-      "X-averaged separator electrolyte potential [V]\n",
-      "X-averaged separator porosity\n",
-      "X-averaged separator porosity change\n",
-      "X-averaged separator pressure\n",
-      "X-averaged separator temperature\n",
-      "X-averaged separator temperature [K]\n",
-      "X-averaged separator tortuosity\n",
-      "X-averaged separator transverse volume-averaged acceleration\n",
-      "X-averaged separator transverse volume-averaged acceleration [m.s-2]\n",
-      "X-averaged separator transverse volume-averaged velocity\n",
-      "X-averaged separator transverse volume-averaged velocity [m.s-2]\n",
-      "X-averaged separator volume-averaged acceleration\n",
-      "X-averaged separator volume-averaged acceleration [m.s-1]\n",
-      "X-averaged solid phase ohmic losses\n",
-      "X-averaged solid phase ohmic losses [V]\n",
-      "X-averaged total SEI thickness\n",
-      "X-averaged total SEI thickness [m]\n",
-      "X-averaged total heating\n",
-      "X-averaged total heating [W.m-3]\n",
-      "X-averaged volume-averaged acceleration\n",
-      "X-averaged volume-averaged acceleration [m.s-1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "SPMe.variables.search(\"X-averaged\")"
    ]
@@ -488,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|██████████████████████████████████████████████████████████| 540/540 [00:04<00:00, 121.14it/s]\n"
+      "Stepping simulation: 100%|██████████████████████████████████████████████████████████| 540/540 [00:04<00:00, 108.88it/s]\n"
      ]
     }
    ],
