--- a/docs/examples/04 Initial SoC.ipynb
+++ b/docs/examples/04 Initial SoC.ipynb
@@ -20,8 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
-    "import liionpack as lp\n",
+    "try:\n",
+    "    import liionpack as lp\n",
+    "except:\n",
+    "    !pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
+    "    import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -102,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:08<00:00, 140.14it/s]\n"
+      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:09<00:00, 127.99it/s]\n"
      ]
     }
    ],
@@ -149,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:08<00:00, 139.77it/s]\n"
+      "Stepping simulation: 100%|████████████████████████████████████████████████████████| 1200/1200 [00:09<00:00, 128.75it/s]\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
