--- a/docs/examples/06 Changing a model.ipynb
+++ b/docs/examples/06 Changing a model.ipynb
@@ -20,8 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
-    "import liionpack as lp\n",
+    "try:\n",
+    "    import liionpack as lp\n",
+    "except:\n",
+    "    !pip install -q git+https://github.com/pybamm-team/liionpack.git@main\n",
+    "    import liionpack as lp\n",
     "import pybamm\n",
     "import numpy as np"
    ]
@@ -112,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78711828ea54ad8a24274f5f1c67e6b",
+       "model_id": "bea2f4033f884cfa9895ce9b90cb5975",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "<pybamm.plotting.quick_plot.QuickPlot at 0x2bfebedecd0>"
+       "<pybamm.plotting.quick_plot.QuickPlot at 0x1846870a760>"
       ]
      },
      "execution_count": 3,
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3afd9aeb6cb47ad9dababc5d4662f98",
+       "model_id": "e340f3a959be462ea4a9a1b0706c649c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 60/60 [00:02<00:00, 25.70it/s]\n"
+      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 60/60 [00:02<00:00, 23.51it/s]\n"
      ]
     }
    ],
@@ -389,7 +392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 60/60 [00:02<00:00, 24.97it/s]\n"
+      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 60/60 [00:02<00:00, 22.65it/s]\n"
      ]
     }
    ],
