--- a/paper.bib
+++ b/paper.bib
@@ -4,3 +4,55 @@
   year = {2016},
   url = {https://dask.org},
 }
+
+@misc {ray,
+  author = {Philipp Moritz and Robert Nishihara and Stephanie Wang and Alexey Tumanov and Richard Liaw and Eric Liang and Melih Elibol and Zongheng Yang and William Paul and Michael I. Jordan and Ion Stoica},
+  title = {Ray: A Distributed Framework for Emerging {AI} Applications},
+  booktitle = {13th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 18)},
+  year = {2018},
+  isbn = {978-1-939133-08-3},
+  address = {Carlsbad, CA},
+  pages = {561--577},
+  url = {https://www.usenix.org/conference/osdi18/presentation/moritz},
+  publisher = {{USENIX} Association},
+  month = oct,
+}
+
+@article{casadi,
+  title={CasADi: a software framework for nonlinear optimization and optimal control},
+  author={Andersson, Joel AE and Gillis, Joris and Horn, Greg and Rawlings, James B and Diehl, Moritz},
+  journal={Mathematical Programming Computation},
+  volume={11},
+  number={1},
+  pages={1--36},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{pybamm,
+  title={Python battery mathematical modelling (PyBaMM)},
+  author={Sulzer, Valentin and Marquis, Scott G and Timms, Robert and Robinson, Martin and Chapman, S Jon},
+  journal={Journal of Open Research Software},
+  volume={9},
+  number={1},
+  year={2021},
+  publisher={Ubiquity Press}
+}
+
+@book{ltspice,
+  title={The LTspice IV simulator: manual, methods and applications},
+  author={Brocard, Gilles},
+  year={2013},
+  publisher={W{\"u}rth Elektronik}
+}
+
+@article{mna,
+  title={The modified nodal approach to network analysis},
+  author={Ho, Chung-Wen and Ruehli, Albert and Brennan, Pierce},
+  journal={IEEE Transactions on circuits and systems},
+  volume={22},
+  number={6},
+  pages={504--509},
+  year={1975},
+  publisher={IEEE}
+}
