--- a/paper.bib
+++ b/paper.bib
@@ -56,3 +56,14 @@
   year={1975},
   publisher={IEEE}
 }
+
+@article{jellyroll,
+  title={Probing heterogeneity in li-ion batteries with coupled multiscale models of electrochemistry and thermal transport using tomographic domains},
+  author={Tranter, TG and Timms, R and Heenan, TMM and Marquis, SG and Sulzer, V and Jnawali, A and Kok, MDR and Please, CP and Chapman, SJ and Shearing, PR and others},
+  journal={Journal of The Electrochemical Society},
+  volume={167},
+  number={11},
+  pages={110538},
+  year={2020},
+  publisher={IOP Publishing}
+}
