Add Lcapy and other small edits

--- a/paper.bib
+++ b/paper.bib
@@ -5,6 +5,13 @@
   url = {https://dask.org},
 }
 
+@misc{lcapy,
+  title = {Lcapy, a Python package for linear circuit analysis},
+  author = {{The Lcapy developers}},
+  year = {2014},
+  url = {https://lcapy.readthedocs.io},
+}
+
 @misc {ray,
   author = {Philipp Moritz and Robert Nishihara and Stephanie Wang and Alexey Tumanov and Richard Liaw and Eric Liang and Melih Elibol and Zongheng Yang and William Paul and Michael I. Jordan and Ion Stoica},
   title = {Ray: A Distributed Framework for Emerging {AI} Applications},
