More refs for example and change name to lowercase

--- a/paper.bib
+++ b/paper.bib
@@ -74,3 +74,25 @@
   year={2020},
   publisher={IOP Publishing}
 }
+
+@article{Chen2020,
+  title={Development of experimental techniques for parameterization of multi-scale lithium-ion battery models},
+  author={Chen, Chang-Hui and Brosa Planella, Ferran and O’Regan, Kieran and Gastol, Dominika and Widanage, W Dhammika and Kendrick, Emma},
+  journal={Journal of The Electrochemical Society},
+  volume={167},
+  number={8},
+  pages={080534},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{Marquis2020,
+  title={A suite of reduced-order models of a single-layer lithium-ion pouch cell},
+  author={Marquis, Scott G and Timms, Robert and Sulzer, Valentin and Please, Colin P and Chapman, S Jon},
+  journal={Journal of The Electrochemical Society},
+  volume={167},
+  number={14},
+  pages={140513},
+  year={2020},
+  publisher={IOP Publishing}
+}
