Update spelling and grammar

--- a/docs/examples/03 Experiments.ipynb
+++ b/docs/examples/03 Experiments.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now define the experiment as a constant current discharge for 1000 seconds followed by a rest of 1000 seconds followed by a constant current charge of 1000 seconds, repeated three times with a 10 second period. The period in PyBaMM determines the output data reporting period but here it also determines the global time step. This means that when solving the problem the local currents are held fixed for a period of 10 seconds and then a the new cell internal resistances and open circuit voltages are used to solve the circuit and new currents are determined by the global balance."
+    "Now define the experiment as a constant current discharge for 1000 seconds followed by a rest of 1000 seconds followed by a constant current charge of 1000 seconds, repeated three times with a 10 second period. The period in PyBaMM determines the output data reporting period but here it also determines the global time step. This means that when solving the problem the local currents are held fixed for a period of 10 seconds and then the new cell internal resistances and open circuit voltages are used to solve the circuit and new currents are determined by the global balance."
    ]
   },
   {
