--- a/docs/examples/04 Initial SoC.ipynb
+++ b/docs/examples/04 Initial SoC.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets set up the most simple pack possible with 1 battery and very low busbar resistance to compare to a pure PyBaMM simulation"
+    "Lets set up the most simple pack possible with one battery and very low busbar resistance to compare to a pure PyBaMM simulation"
    ]
   },
   {
