--- a/docs/examples/05 Drive cycles.ipynb
+++ b/docs/examples/05 Drive cycles.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PyBaMM provides a number of example drive cycles which can be read in from csv files. So we first change our current directory to the PyBaMM root directory in order to read it in."
+    "PyBaMM provides a number of example drive cycles that define the instantaneous current which can be read in from csv files. So we first change our current directory to the PyBaMM root directory in order to read it in."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can load an experiment using the drive cycle and give it a dictionary key and an operating condition to run it. N.B this is a new feature for PyBaMM and syntax may change so please condult the documentation and make sure you have the latest version of PyBaMM."
+    "We can load an experiment using the drive cycle and give it a dictionary key and an operating condition to run it. N.B this is a new feature for PyBaMM and syntax may change so please consult the documentation and make sure you have the latest version of PyBaMM."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up our pack using our favourite chemistry"
+    "Set up our pack using our chemistry of interest."
    ]
   },
   {
