--- a/docs/examples/06 Changing a model.ipynb
+++ b/docs/examples/06 Changing a model.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea is that the function get's called behind the scenes by the solvers and we pass in the parameter_values dictionary and return a simulation that is ready to build and use."
+    "The idea is that the function gets called behind the scenes by the solvers and we pass in the parameter_values dictionary and return a simulation that is ready to build and use."
    ]
   },
   {
