--- a/docs/examples/08 SEI degradation model.ipynb
+++ b/docs/examples/08 SEI degradation model.ipynb
@@ -116,10 +116,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e6dc3e",
+   "id": "1e0bdb24-70a5-4ab9-a69f-506a57b0b7d9",
    "metadata": {},
    "source": [
-    "Lets pick a variables for the output"
+    "Let's pick a variables for the output"
    ]
   },
   {
