--- a/docs/examples/06 Changing a model.ipynb
+++ b/docs/examples/06 Changing a model.ipynb
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eefe43297b24faca616d97a5952721e",
+       "model_id": "cd8492ba3c6e44498c27321af9316384",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "<pybamm.plotting.quick_plot.QuickPlot at 0x1c222afd8b0>"
+       "<pybamm.plotting.quick_plot.QuickPlot at 0x1b95ea1cf10>"
       ]
      },
      "execution_count": 3,
@@ -250,12 +250,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19a6a4d460ed4a9dac089e4e64149a4b",
+       "model_id": "4159df60203f4f10a0e73a79bffc8bce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.0, description='t', max=3566.1124686798817, step=35.661124686798814)…"
+       "interactive(children=(FloatSlider(value=0.0, description='t', max=3566.112468749215, step=35.661124687492155),…"
       ]
      },
      "metadata": {},
@@ -299,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 61/61 [00:02<00:00, 25.29it/s]\n"
+      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 61/61 [00:02<00:00, 24.16it/s]\n"
      ]
     }
    ],
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 61/61 [00:02<00:00, 25.18it/s]\n"
+      "Stepping simulation: 100%|█████████████████████████████████████████████████████████████| 61/61 [00:02<00:00, 25.14it/s]\n"
      ]
     }
    ],
