--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -68,8 +68,8 @@
 }
 
 @article{jellyroll,
-  title={Probing heterogeneity in li-ion batteries with coupled multiscale models of electrochemistry and thermal transport using tomographic domains},
-  author={Tranter, TG and Timms, R and Heenan, TMM and Marquis, SG and Sulzer, V and Jnawali, A and Kok, MDR and Please, CP and Chapman, SJ and Shearing, PR and others},
+  title={Probing heterogeneity in {L}i-ion batteries with coupled multiscale models of electrochemistry and thermal transport using tomographic domains},
+  author={Tranter, T G and Timms, R and Heenan, T M M and Marquis, S G and Sulzer, V and Jnawali, A and Kok, M D R and Please, C P and Chapman, S J and Shearing, P R and others},
   journal={Journal of The Electrochemical Society},
   volume={167},
   number={11},
