--- a/docs/examples/05 Drive cycles.ipynb
+++ b/docs/examples/05 Drive cycles.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "# import drive cycle from file\n",
     "drive_cycle = pd.read_csv(\n",
-    "    \"pybamm/input/drive_cycles/US06.csv\", comment=\"#\", header=None\n",
+    "    pybamm.DataLoader().get_data(\"US06.csv\"), comment=\"#\", header=None\n",
     ").to_numpy()"
    ]
   },
